src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Banner__c</fullName>
        <formula>IF( INACTIVE_CONTACT__c , IMAGE(&quot;/servlet/servlet.FileDownload?file=015410000027dt7&quot;,&quot;Inactive Contact&quot;),

   IF(Account.Named_Account__c, IMAGE(&quot;/servlet/servlet.FileDownload?file=015410000027dt9&quot;,&quot;Named Account&quot;),&quot;&quot;)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays Inactive or Named as appropriate.</inlineHelpText>
        <label>Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Specific_Billing_Invoicing__c</fullName>
        <label>Contact-Specific Billing &amp; Invoicing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Specific_LOA_Verbiage__c</fullName>
        <label>Contact-Specific LOA Verbiage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Specific_Payable_Period__c</fullName>
        <label>Contact-Specific Payable Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Specific_Scheduling_Notes__c</fullName>
        <label>Contact-Specific Scheduling Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Specific_Trainer_Notes__c</fullName>
        <label>Contact-Specific Trainer Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Specific_Travel_Notes__c</fullName>
        <label>Contact-Specific Travel Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ext__c</fullName>
        <label>Ext.</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Call_Date_Time__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FS_Last_List_ID__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last List ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_List_Name__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_Exit_Reason__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook Exit Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_ID__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_Name__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_Step_ID__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook Step ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_Step_Name__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook Step Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_Step_Type__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook Step Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Voice_Message_ID__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Voice Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Voice_Message_Name__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Voice Message Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Total_Calls__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Total Calls</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Start_Date__c</fullName>
        <formula>Account.Fiscal_Year_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flag_as_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag as Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INACTIVE_CONTACT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INACTIVE CONTACT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Trainer_Fee__c</fullName>
        <inlineHelpText>This is the current amount we&apos;ve contracted to pay this trainer for a full day of work.</inlineHelpText>
        <label>Individual Trainer Fee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Exclude_from_Post_Event_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you do not wish for this person to receive the post training event surveys.</inlineHelpText>
        <label>Exclude from Post Event Survey?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Completed_Activity__c</fullName>
        <label>Last Completed Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Contract_Date__c</fullName>
        <label>Last Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_SLX_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy SLX ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Migrate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDA_Received_Date__c</fullName>
        <label>NDA Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>National_Account_Banner__c</fullName>
        <description>Image file in Prod is 015G000000QVc8r</description>
        <formula>IF(Account.Named_Account__c, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015G000000QVc8r&quot;,&quot;National Account&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the Owner of the Account is the National Account Team, the record shows the National Account Banner.</inlineHelpText>
        <label>National Account Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Bar__c</fullName>
        <description>Image in Prod is ID 015G000000QVeSU</description>
        <formula>IF(Account.Named_Account__c, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015G000000QVc8w&quot;,&quot;Named Account&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this is a Contact from a Named Account, the record shows the Named Bar, to be used in List Views.</inlineHelpText>
        <label>Named Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Power of One</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollup_Training_Events_Revenue__c</fullName>
        <label>Rollup Training Events Revenue</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rollup_Training_Events__c</fullName>
        <label>Rollup Training Events</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Legacy_Contact_Info__c</fullName>
        <inlineHelpText>Migrated together from SalesLogix, so reps may copy &amp; paste data into unique contact records as needed. Contact your administrator if you need this field deleted.</inlineHelpText>
        <label>SLX Legacy Contact Info</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SP_Contact_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>SP Contact Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_No__c</fullName>
        <label>Tax Exempt No.</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Shipping_on_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Shipping on Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>HYPERLINK(Account.Website , Account.Website , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X180_Days_since_last_Activity_on_Account__c</fullName>
        <formula>IF(Account.X180_Days_since_last_Activity__c=TRUE , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>180 Days since last Activity on Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X90_days_since_last_activity_on_Account__c</fullName>
        <formula>IF(Account.X90_days_since_last_activity__c=TRUE , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>90 days since last activity on Account</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>General_Contacts</fullName>
        <active>true</active>
        <description>General Contacts include all customer/prospect points of contact</description>
        <label>General Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trainer_Contacts</fullName>
        <active>true</active>
        <description>Trainer Contacts include all independent contractors currently or formerly doing business with SkillPath</description>
        <label>Trainer Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Contacts</fullName>
        <active>true</active>
        <description>Vendor Contacts include contacts providing good and services to SkillPath</description>
        <label>Vendor Contacts</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_Ops_Manages_Trainers</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT( $User.ProfileId = &quot;00eG0000001GB2Q&quot; /*System Admin profile*/ ),
NOT( $User.ProfileId = &quot;00eG0000000S5pj&quot; /*Operations profile*/),
ISCHANGED(LastModifiedDate),
OR(AccountId = &apos;001G000001m505R&apos;,
AccountId = &apos;001G000001m6sFw&apos;,
AccountId = &apos;001G000001maGIe&apos;))</errorConditionFormula>
        <errorMessage>Only operations and system administrators may change SkillPath Trainer contacts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Changing_Ownership</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( OwnerId )
&amp;&amp; 
PRIORVALUE( OwnerId ) != &apos;005G0000004vtoD&apos;
&amp;&amp;
$User.ProfileId = &quot;00eG0000000S5pk&quot; /*Sales Rep profile*/</errorConditionFormula>
        <errorMessage>The Ownership may not be changed due to Pool Rules.</errorMessage>
    </validationRules>
</CustomObject>